@@ -1,6 +1,10 @@
 jsoup changelog
 
 *** Release 1.11.3 [PENDING]
+  * Improvement: Deflate encoding is now supported.
+    <https://github.com/jhy/jsoup/issues/556>
+    <https://github.com/jhy/jsoup/issues/964>
+
   * Improvement: CDATA sections are now treated as whitespace preserving (regardless of the containing element), and are
     round-tripped into output HTML.
     <https://github.com/jhy/jsoup/issues/406>
